feature-templates/nCino/dataset/01yO3G1U-Product Hierarchy/.store/metadata/objects/LLC_BI__Product_Package__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Stage__c</fullName>
        <description>This field specifies the current product package approval stage. If provided, this value should match one of the Stage pick list values configured for this financial institution. Optional and manually populated.</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is optional and manually set (or set through workflow configuration). This field is used to specify the Status of the product package. Generally used in the approval process configuration.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Intermediately Approved</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Intermediately Rejected</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Approval Step 1</fullName>
                </value>
                <value>
                    <fullName>Approval Step 2</fullName>
                </value>
                <value>
                    <fullName>Approval Step 3</fullName>
                </value>
                <value>
                    <fullName>Approval Step 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__TBE__c</fullName>
        <description>This field is optional and manually set. This currency field is used to capture the Total Exposure (Borrowers) for the product package. This can be used alone or in conjunction with any other exposure fields. This field can also be configured to be populated with field mapping from the customers core.</description>
        <label>TBE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__TCE__c</fullName>
        <description>This field is optional and manually set. This currency field is used to capture total exposure (Credit) for the product package. This can be used alone or in conjunction with any other exposure fields. This field can also be configured to be populated with field mapping from the customers core.</description>
        <label>TCE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__TOE__c</fullName>
        <description>This field is optional and manually set. This currency field is used to capture total exposure (Obligor) for the product package. This can be used alone or in conjunction with any other exposure fields. This field can also be configured to be populated with field mapping from the customers core.</description>
        <label>TOE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Affiliated_Exposure__c</fullName>
        <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Total Affiliated Exposure to this Product Package.</description>
        <label>Total Affiliated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Allocated_Syndication_Amount__c</fullName>
        <description>This optional field is an automatic roll-up of the total allocation amounts of any loans flagged as syndications that are associated with the product package.</description>
        <label>Total Allocated Syndication Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Direct_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Total Direct Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Total Direct Exposure to the Product Package.</inlineHelpText>
        <label>Total Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Indirect_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Total Indirect Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Total Indirect Exposure to the Product Package.</inlineHelpText>
        <label>Total Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Loan_Facilities_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This field is automatically calculated. This field calculates and shows the total amount of all the main level facility &quot;original amount&quot; in the product package. This field will NOT include those loans that have been superseded, declined or withdrawn.</description>
        <label>Total Loan Facilities Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Loan_Facilities_Exposure__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This field is optional and manually set. This field is used to specify the amount on exposure for all the main facility loans in the product package. This can be used alone or in conjunction with any other exposure fields. This field can also be configured to be populated with field mapping from the customers core.</description>
        <label>Total Loan Facilities Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Net_New_Funds__c</fullName>
        <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Total Net New Funds to this Product Package.</description>
        <label>Total Net New Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Syndicated_Facility_Amount__c</fullName>
        <description>This optional field is an automatic roll-up of the total facility amounts of any loans flagged as syndications that are associated with the product package.</description>
        <label>Total Syndicated Facility Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Annual_Operating_Cost__c</fullName>
        <description>Users populate this field with the approximate annual operating cost of originating and servicing any new treasury services an FI originates in the deal. By default, it is blank.</description>
        <inlineHelpText>The approximate annual operating cost in dollars for new treasury service products an FI originates in the deal outside of nCino.</inlineHelpText>
        <label>Treasury Annual Operating Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Unused__c</fullName>
        <description>This currency field is optional and manually entered field. This field is used to specify the available amount or (unused) amount in all the main facility loans in the product package. This field can also be configured to be populated with field mapping from the customers core</description>
        <label>Unused</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This field is used as an external, unique key for the Product Package ID record. This value is not generally made visible to the user as it is usually used behind the scenes in data mapping exercises.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>X1st_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>1st Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Package_1st_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2nd_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2nd Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Packages_2nd_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cm_Approval_Committee__c</fullName>
        <label>Approval Committee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Loan Committee</fullName>
                </value>
                <value>
                    <fullName>Board of Directors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Background_Loan__c</fullName>
        <description>Used to capture the loan background for product package credit memo. Added for the Commercial Accelerate project.</description>
        <label>Background (Loan)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>cm_Collateral_Analysis_Collateral_Mgmt__c</fullName>
        <description>Used to capture the collateral analysis for product package credit memo. Added for the Commercial Accelerate project.</description>
        <label>Collateral Analysis (Collateral Mgmt)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>cm_Covenant_Analysis__c</fullName>
        <description>Used to capture the covenant narrative information for product package credit memo. Added for the Commercial Accelerate project.</description>
        <label>Covenant Analysis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>cm_Deal_Summary_Loan__c</fullName>
        <description>Used to capture the deal summary for product package credit memo. Added for the Commercial Accelerate project.</description>
        <label>Deal Summary (Loan)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>cm_Financial_Analysis_Loan__c</fullName>
        <description>Used to capture the financial analysis for product package credit memo. Added for the Commercial Accelerate project.</description>
        <label>Financial Analysis (Loan)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>cm_Loan_Committee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Product Package Approval Process to indicate package should route to a loan committee for approval. Added for the Commercial Accelerate project.</description>
        <label>Loan Committee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cm_Relationship_Product_Request_Overview__c</fullName>
        <description>Used to capture the relationship and product request overview information for product package credit memo. Added for the Commercial Accelerate project.</description>
        <label>Relationship &amp; Product Request Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>cm_Risk_Analysis_Loan__c</fullName>
        <description>Used to capture the risk analysis for product package credit memo. Added for the Commercial Accelerate project.</description>
        <label>Risk Analysis (Loan)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>cm_Send_to_Level_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the Product Package approval process. Added for Commercial Accelerate project.</description>
        <label>Send to Level 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cm_Send_to_Level_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the Product Package approval process. Added for Commercial Accelerate project.</description>
        <label>Send to Level 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTest__c</fullName>
        <label>isTest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Package</label>
    <listViews>
        <fullName>Board_of_Directors_Product_Package</fullName>
        <filterScope>Queue</filterScope>
        <label>Board of Directors</label>
        <queue>Board_of_Directors</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Primary_Officer__c</columns>
        <columns>LLC_BI__Secondary_Officer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Loan_Committee_Product_Package</fullName>
        <filterScope>Queue</filterScope>
        <label>Loan Committee</label>
        <queue>Loan_Committee</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Product Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>